--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,6 @@ junit = "4.13.2"
 jetpack-compose-bom = "2025.06.00"
 compose-material3 = "1.3.2"
 com-google-code-gson = "2.13.1"
-voyager = "1.0.1"
 composeImageLoader = "1.10.0"
 napier = "2.7.1"
 buildConfig = "5.6.5"
@@ -22,12 +21,12 @@ kotlinx-coroutines = "1.10.2"
 composeIcons = "1.1.1"
 kotlinx-datetime = "0.6.2"
 multiplatformSettings = "1.3.0"
-koin = "4.0.4"
+koin = "4.1.0"
 ksp-version = "2.1.21-2.0.1"
 ktorVersion = "3.1.3"
 ktorfit-version = "2.5.2"
 ktorfit-converter-version = "2.5.2"
-koin-compose-version = "4.0.4"
+koin-compose-version = "4.1.0"
 datastore-version = "1.1.7"
 constraint-layout-version = "0.6.0"
 kotlinx-serialization = "1.8.1"
@@ -40,6 +39,8 @@ sqlite = "2.5.1"
 kotlinx-coroutines-test = "1.10.2"
 roboelectric = "4.14.1"
 paging = "3.3.0-alpha02-0.5.1"
+compose-navigation = "2.9.0-beta02"
+
 [libraries]
 compottie = { module = "io.github.alexzhirkevich:compottie", version.ref = "compottie" }
 compottie-dot = { module = "io.github.alexzhirkevich:compottie-dot", version.ref = "compottie" }
@@ -62,6 +63,7 @@ compose-foundation = { group = "androidx.compose.foundation", name = "foundation
 compose-runtime-android = { module = "androidx.compose.runtime:runtime-android", version.ref = "compose" }
 compose-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "compose" }
 compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "compose-material3" }
+compose-navigation = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "compose-navigation"}
 composeIcons-featherIcons = { module = "br.com.devsrsouza.compose.icons:feather", version.ref = "composeIcons" }
 composeImageLoader = { module = "io.github.qdsfdhvh:image-loader", version.ref = "composeImageLoader" }
 koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin-compose-version" }
@@ -96,7 +98,6 @@ ktorfit-ksp = { module = "de.jensklingenberg.ktorfit:ktorfit-ksp", version.ref =
 ktorfit-lib = { module = "de.jensklingenberg.ktorfit:ktorfit-lib", version.ref = "ktorfit-version" }
 multiplatformSettings = { module = "com.russhwolf:multiplatform-settings", version.ref = "multiplatformSettings" }
 napier = { module = "io.github.aakira:napier", version.ref = "napier" }
-voyager-navigator = { module = "cafe.adriel.voyager:voyager-navigator", version.ref = "voyager" }
 jetpack-datastore = { module = "androidx.datastore:datastore-preferences-core", version.ref = "datastore-version" }
 constraint-layout = { module = "tech.annexflow.compose:constraintlayout-compose-multiplatform", version.ref = "constraint-layout-version" }
 paging-common = { module = "app.cash.paging:paging-common", version.ref = "paging" }
@@ -148,7 +149,7 @@ layer-core-viewmodels = [
 ]
 
 layer-core-ui = [
-    "voyager-navigator",
+    "compose-navigation",
     "composeImageLoader",
     "napier",
     "kotlinx-coroutines-core",
@@ -204,10 +205,6 @@ android-core = [
     "androidx-core-ktx",
 ]
 
-ios-core = [
-    "touchlab-stately-iso-collections",
-    "touchlab-stately-isolate"
-]
 android-core-ui = [
     "androidx-appcompat",
     "androidx-activityCompose",
@@ -228,6 +225,11 @@ android-data-core = [
     "room-compiler",
     "room-runtime",
     "sqlite-bundled"
+]
+
+ios-core = [
+    "touchlab-stately-iso-collections",
+    "touchlab-stately-isolate"
 ]
 
 ios-data-core = [
