(wip): Refactor uses cases, repositories and viewmodels to optimize infinite paging

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -40,7 +40,7 @@ kotlinx-coroutines-test = "1.10.2"
 roboelectric = "4.14.1"
 paging = "3.3.0-alpha02-0.5.1"
 compose-navigation = "2.9.0-beta02"
-
+haze-version = "1.6.4"
 [libraries]
 compottie = { module = "io.github.alexzhirkevich:compottie", version.ref = "compottie" }
 compottie-dot = { module = "io.github.alexzhirkevich:compottie-dot", version.ref = "compottie" }
@@ -64,6 +64,8 @@ compose-runtime-android = { module = "androidx.compose.runtime:runtime-android",
 compose-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "compose" }
 compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "compose-material3" }
 compose-navigation = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "compose-navigation"}
+compose-glassmorphism = { module = "dev.chrisbanes.haze:haze", version.ref = "haze-version" }
+compose-glassmorphism-materials = { module = "dev.chrisbanes.haze:haze-materials", version.ref = "haze-version" }
 composeIcons-featherIcons = { module = "br.com.devsrsouza.compose.icons:feather", version.ref = "composeIcons" }
 composeImageLoader = { module = "io.github.qdsfdhvh:image-loader", version.ref = "composeImageLoader" }
 koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin-compose-version" }
@@ -174,6 +176,8 @@ layer-core-ui = [
     "compottie-resources",
     "paging-common",
     "paging-compose",
+    "compose-glassmorphism",
+    "compose-glassmorphism-materials",
 ]
 
 layer-data-datasources-core = [
